--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <div>
  <h1>Page de test</h1>
 </div>
- <iframe width="1800" height="800" src="https://coveadev.service-now.com/sp?id=page_for_iframe">ServiceNow</iframe>
+ <iframe width="1800" height="800" src="https://coveadev.service-now.com/now/nav/ui/home">ServiceNow</iframe>
 </body>
 </html>
